--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -6,7 +6,7 @@
       h1 = t '.heading'
       p = 'Braucht es hier noch eine Einleitung zu den FAQs? Also beispielsweise einen Verweis auf die Moeglichkeit auch per E-Mail nachzufragen, ein Inhaltsverzeichnis etc.?'
       section.section-question-group
-        h4.section-question-group__headline = t 'Grundsatzfragen'
+        h3.section-question-group__headline = 'Grundsatzfragen'
         .section-question-group__body
           h4.FAQ_question = '> Wie funktioniert clarat?'
           .FAQ_paragraph = 'Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was Du als nächstes tun musst, um das Angebot zu nutzen.'
@@ -16,7 +16,7 @@
           .FAQ_paragraph = 'clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte.Anliegen eingeben, Angebot finden und dann hin.'
 
       section.section-question-group
-        h4.section-question-group__headline = t 'Fragen für Mitarbeiter des Jugendamts'
+        h3.section-question-group__headline = 'Fragen für Mitarbeiter des Jugendamts'
         .section-question-group__body
           h4.FAQ_question = '> Wie funktioniert clarat?'
           .FAQ_paragraph = 'Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was Du als nächstes tun musst, um das Angebot zu nutzen.'
@@ -26,7 +26,7 @@
           .FAQ_paragraph = 'clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte.Anliegen eingeben, Angebot finden und dann hin.'
 
       section.section-question-group
-        h4.section-question-group__headline = t 'Fragen für die Kanzlerin'
+        h3.section-question-group__headline = 'Fragen für die Kanzlerin'
         .section-question-group__body
           h4.FAQ_question = '> Wie funktioniert clarat?'
           .FAQ_paragraph = 'Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was Du als nächstes tun musst, um das Angebot zu nutzen.'
@@ -36,7 +36,7 @@
           .FAQ_paragraph = 'clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte.Anliegen eingeben, Angebot finden und dann hin.'
 
         section.section-question-group
-          h4.section-question-group__headline = t 'Bonusfragen'
+          h3.section-question-group__headline = 'Bonusfragen'
           .section-question-group__body
             h4.FAQ_question = '> Wie funktioniert clarat?'
             .FAQ_paragraph = 'Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was Du als nächstes tun musst, um das Angebot zu nutzen.'
