--- a/app/assets/stylesheets/modules/sections/_section-team.scss
+++ b/app/assets/stylesheets/modules/sections/_section-team.scss
@@ -13,23 +13,32 @@
   position: relative;
   float: left;
   margin: 0 1% 2.5% 0;
-  padding: 42px 20px 20px;
+  padding-top: 42px;
   width: 32%;
   background: $brand_beige;
-
-  &:after {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 22px;
-    background: $brand_green;
-    content: '';
-  }
 
   &:first-of-type:after {
     @extend %clarat_rounding_start;
   }
+
+  .section-team__name {
+    @extend %roboto_bold;
+    @extend %clarat_rounding_start;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    line-height: 45px;
+    background: $brand_green;
+    color: $brand_white;
+    content: '';
+    font-size: 24px;
+    padding:  0 30px;
+    font-weight: 400;
+    vertical-align: middle;
+  }
+
+
 
   &:last-of-type {
     @extend %clarat_rounding_end;
@@ -37,17 +46,12 @@
 
   p {
     min-height: 10em;
+    padding: 0px 22px;
+    margin-top: 0px;
   }
 }
 
 .section-team__profile {
   margin-bottom: 15px;
   width: 100%;
-}
-
-.section-team__headline {
-  @extend %roboto_bold;
-  margin-top: 0;
-  margin-bottom: 0;
-  font-weight: 400;
 }
