--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -12,81 +12,97 @@
         h2 Team
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Amina
+          .section-team__name
+            = 'Amina'
+          img.section-team__profile[src='/assets/team/amina.jpg']
           p = t '.amina'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Andrea
+          .section-team__name
+            = 'Andrea'
+          img.section-team__profile[src='/assets/team/andrea.jpg']
           p = t '.andrea'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Anne
+          .section-team__name
+            = 'Anne'
+          img.section-team__profile[src='/assets/team/anne.jpg']
           p = t '.anne'
 
         .section-team__member
-          img.section-team__profile[src='http://i.imgur.com/FZ2Tg0a.jpg']
-          h3.section-team__headline Basti
+          .section-team__name
+            = 'Basti'
+          img.section-team__profile[src='/assets/team/basti.jpg']
           p = t '.basti'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Elisa
+          .section-team__name
+            = 'Elisa'
+          img.section-team__profile[src='/assets/team/lisi.jpg']
           p = t '.elisa'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Janina
+          .section-team__name
+            = 'Janina'
+          img.section-team__profile[src='/assets/team/janina.jpg']
           p = t '.janina'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Jens
+          .section-team__name
+            = 'Jens'
+          img.section-team__profile[src='/assets/team/jens.jpg']
           p = t '.jens'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Jule
+          .section-team__name
+            = 'Jule'
+          img.section-team__profile[src='/assets/team/jule.jpg']
           p = t '.jule'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Julia
+          .section-team__name
+            = 'Julia'
+          img.section-team__profile[src='/assets/team/julia.jpg']
           p = t '.julia'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Julian
+          .section-team__name
+            = 'Julian'
+          img.section-team__profile[src='/assets/team/julian.jpg']
           p = t '.julian'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Konstantin
+          .section-team__name
+            = 'Konstantin'
+          img.section-team__profile[src='/assets/team/konstantin.jpg']
           p = t '.konstantin'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Lisa
+          .section-team__name
+            = 'Lisa'
+          img.section-team__profile[src='/assets/team/lisa.jpg']
           p = t '.lisa'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Marcus
+          .section-team__name
+            = 'Marcus'
+          img.section-team__profile[src='/assets/team/marcus.jpg']
           p = t '.marcus'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Nicole
+          .section-team__name
+            = 'Nicole'
+          img.section-team__profile[src='/assets/team/nicole.jpg']
           p = t '.nicole'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Stefan
+          .section-team__name
+            = 'Stefan'
+          img.section-team__profile[src='/assets/team/stefan.jpg']
           p = t '.stefan'
 
         .section-team__member
-          img.section-team__profile[src='http://placehold.it/255x174']
-          h3.section-team__headline Verena
+          .section-team__name
+            = 'Verena'
+          img.section-team__profile[src='/assets/team/verena.jpg']
           p = t '.verena'
