--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -59,4 +59,11 @@
     // @TODO: smaller font for both headlines and paragraphs
   }
 
+  .section-team__member {
+
+    p {
+      min-height: 20em;
+    }
+  }
+
 }
