--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -5,7 +5,7 @@
     .wrapper-inner
       h1 = t '.heading'
       p = 'Braucht es hier noch eine Einleitung zu den FAQs? Also beispielsweise einen Verweis auf die Moeglichkeit auch per E-Mail nachzufragen, ein Inhaltsverzeichnis etc.?'
-      section.section-question-group
+      section
         h3.section-question-group__headline = 'Grundsatzfragen'
         .section-question-group__body
           h4.FAQ_question = '> Wie funktioniert clarat?'
@@ -15,7 +15,7 @@
           h4.FAQ_question = '> Für wen ist clarat?'
           .FAQ_paragraph = 'clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte.Anliegen eingeben, Angebot finden und dann hin.'
 
-      section.section-question-group
+      section
         h3.section-question-group__headline = 'Fragen für Mitarbeiter des Jugendamts'
         .section-question-group__body
           h4.FAQ_question = '> Wie funktioniert clarat?'
@@ -25,7 +25,7 @@
           h4.FAQ_question = '> Für wen ist clarat?'
           .FAQ_paragraph = 'clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte.Anliegen eingeben, Angebot finden und dann hin.'
 
-      section.section-question-group
+      section
         h3.section-question-group__headline = 'Fragen für die Kanzlerin'
         .section-question-group__body
           h4.FAQ_question = '> Wie funktioniert clarat?'
@@ -35,7 +35,7 @@
           h4.FAQ_question = '> Für wen ist clarat?'
           .FAQ_paragraph = 'clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte.Anliegen eingeben, Angebot finden und dann hin.'
 
-        section.section-question-group
+        section
           h3.section-question-group__headline = 'Bonusfragen'
           .section-question-group__body
             h4.FAQ_question = '> Wie funktioniert clarat?'
