--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -1,6 +1,6 @@
 - provide(:title, t('.title'))
 - cache 'faq_page' do
-
+# / TODO: Put in real question an move them to the locales
   main.content-main.content-main--wide
     .wrapper-inner
       h1 = t '.heading'
