for #289 - add marker data to ajax response

--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -17,7 +17,7 @@
       h5.aside-standard__headline = I18n.t('offers.map.headline_small_map')
 
       #map-container
-        #map-canvas data={markers: @markers.to_json, position: @position.to_json}
+        #map-canvas
 
       a.map__button--enlarge.big-map_open[href="#big-map"] = I18n.t('offers.map.enlarge_map')
 
