Adjust info boxes to less text

--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -59,6 +59,10 @@
     // @TODO: smaller font for both headlines and paragraphs
   }
 
+  .section-start__body {
+    min-height: 340px;
+  }
+
   .section-team__member {
 
     p {
