--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -144,7 +144,7 @@
   .section-team__member {
     width: 32%;
 
-    &:nth-child(3n+1) { // every third item
+    &:nth-child(3n) { // every third item
       margin-right: 0;
     }
   }
