--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -188,12 +188,16 @@
   .section-team__member {
     width: 49%;
 
-    &:nth-child(2n+1) { // every third item
+    &:nth-child(2n) { // every third item
       margin-right: 0;
     }
 
-    &:nth-child(3n+1) { // every third item
+    &:nth-child(3n) { // every third item
       margin-right: 1%;
+    }
+
+    p {
+      min-height: 25em;
     }
   }
 
