--- a/app/views/contacts/shared/_new.html.slim
+++ b/app/views/contacts/shared/_new.html.slim
@@ -1,3 +1,5 @@
+- if reporting
+  = t('.send_us_a_message')
 = simple_form_for contact,
                     html: { class: 'contact-form' },
                     remote: reporting do |f|
