--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -4,21 +4,22 @@ footer.footer-main
       .footer-main__subscribe
         = render 'subscriptions/shared/new', subscription: subscription
 
-        - cache 'footer_links_1' do
+        / ToDo: Temporarily disable Social Media buttons
+        / - cache 'footer_links_1' do
 
-          .Social-media
-            = link_to t('.gplus.anchor'),
-                      t('.gplus.href'),
-                      target: '_blank',
-                      class: 'Social-media__item Social-media__item--googleplus'
-            = link_to t('.twitter.anchor'),
-                      t('.twitter.href'),
-                      target: '_blank',
-                      class: 'Social-media__item Social-media__item--twitter'
-            = link_to t('.fb.anchor'),
-                      t('.fb.href'),
-                      target: '_blank',
-                      class: 'Social-media__item Social-media__item--facebook'
+        /   .Social-media
+        /     = link_to t('.gplus.anchor'),
+        /               t('.gplus.href'),
+        /               target: '_blank',
+        /               class: 'Social-media__item Social-media__item--googleplus'
+        /     = link_to t('.twitter.anchor'),
+        /               t('.twitter.href'),
+        /               target: '_blank',
+        /               class: 'Social-media__item Social-media__item--twitter'
+        /     = link_to t('.fb.anchor'),
+        /               t('.fb.href'),
+        /               target: '_blank',
+        /               class: 'Social-media__item Social-media__item--facebook'
 
       .footer-main__about
         - cache 'footer_links_2' do
