Change color coding in offer.show

--- a/app/views/offers/show/_opening_section.html.slim
+++ b/app/views/offers/show/_opening_section.html.slim
@@ -1,4 +1,4 @@
-section.section-content
+section.section-content.section-content--when
   h3.section-content__title = t '.heading'
   .section-content__body
     - if offer.openings.any?
