Change color of online etc. badge in search results

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -15,6 +15,7 @@ $brand_white: #FFF;
 $brand_orange: #F78300;
 $brand_blue: #87A6AE;
 $brand-grey: #C3BFB4;
+$brand-violet: #a586bb;
 
 $font_color: $brand_brown;
 
