--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -104,7 +104,7 @@
   display: inline-block;
   margin-right: -5px;
   padding: 6px 6px 8px;
-  background: $brand_blue;
+  background: $brand_violet;
   color: $brand_white;
 
 }
