--- a/app/views/layouts/partials/_head.html.slim
+++ b/app/views/layouts/partials/_head.html.slim
@@ -57,6 +57,12 @@ meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png"
 
 meta name="theme-color" content="#F4B528"
 
+/ Stylesheets
+= stylesheet_link_tag 'application', media: 'all',
+                                     'data-turbolinks-track' => true
+= stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css'\
+                      '/font-awesome.min.css'
+
 / Google Analytics
 - if Rails.env.production?
   javascript:
