Delete mouse over

--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -44,7 +44,7 @@ footer.footer-main
               = link_to t('.impressum'), '/impressum'
             li.nav-legal__listitem
               = link_to t('.tos'), '/rechtliche-hinweise'
-            li.nav-legal__listitem.JS-tooltip
+            li.nav-legal__listitem
               = link_to t('.privacy'), '/datenschutzhinweise'
             li.nav-legal__listitem
               / TODO: Refactor or remove after translation testing
