--- a/app/views/pages/privacy.html.slim
+++ b/app/views/pages/privacy.html.slim
@@ -126,4 +126,4 @@
               p = t 'pages.shared.address.zip_city'
               p = t 'pages.shared.address.telephone'
               p = t 'pages.shared.address.fax'
-              p = link_to 'mail@clarat.org', 'mailto:mail@clarat.org'
+              p = link_to 'post@clarat.org', 'mailto:post@clarat.org'
