fix disappearing map bug on offer and organization show

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -45,7 +45,8 @@
             - cache [@offer.location, 'offer_show_map']
 
               #map-container
-                #map-canvas data={ markers: @markers.to_json }
+                #map-data data={ markers: @markers.to_json }
+                #map-canvas
 
             = render 'offers/show/who_location', offer: @offer,
                                                markers: @markers
