Fix bug in search results

--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -43,7 +43,8 @@
   font-weight: 400;
   font-size: 20px;
 
-  a {
+  .big-map_open,
+  .more_remote-offers_open {
     @extend %small_button_style;
     position: absolute;
     right: 0;
