--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -43,6 +43,10 @@
   font-weight: 400;
   font-size: 20px;
 
+  .search-string {
+    max-width: 75%
+  }
+
   .big-map_open,
   .more_remote-offers_open {
     @extend %small_button_style;
