--- a/app/assets/stylesheets/modules/_faq.scss
+++ b/app/assets/stylesheets/modules/_faq.scss
@@ -17,6 +17,9 @@
 .FAQ_paragraph {
   display: none;
   margin-bottom: 0.5em;
+  ul {
+    padding-left: 2em;
+  }
 }
 
 .section-question-group__headline {
