Try to fix weird bug where heroku removes blank spaces between divs

--- a/app/views/offers/index/_single_search_result.html.slim
+++ b/app/views/offers/index/_single_search_result.html.slim
@@ -11,5 +11,6 @@
       span.Listing-results__organization
         .Listing-results__emphasis
           = offer.organization_display_name
-        - if offer.location
-          = offer.location_address
+        span
+          - if offer.location
+            = offer.location_address
