Another try to fix weird bug where heroku removes blank spaces between divs

--- a/app/views/offers/index/_single_search_result.html.slim
+++ b/app/views/offers/index/_single_search_result.html.slim
@@ -11,6 +11,5 @@
       span.Listing-results__organization
         .Listing-results__emphasis
           = offer.organization_display_name
-        span
-          - if offer.location
-            = offer.location_address
+        - if offer.location
+          = " #{offer.location_address}"
