--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -52,8 +52,7 @@
     .wrapper-inner {
       padding: 0;
 
-      .template--pages-home &,
-      .template--pages-about & {
+      .template--pages-home & {
         padding: 0 20px;
       }
     }
@@ -187,13 +186,18 @@
 
   .section-team__member {
     width: 49%;
+    min-height: 640px;
 
-    &:nth-child(2n+1) { // every third item
-      margin-right: 0;
+    &:nth-of-type(4n+1) { // reset
+      margin-left: 1.8%;
     }
 
-    &:nth-child(3n+1) { // every third item
-      margin-right: 1%;
+    &:nth-of-type(3n+1) { // reset
+      margin-left: 1.8%;
+    }
+
+    &:nth-of-type(2n+1) {
+      margin-left: 0;
     }
   }
 
