more welcome mail changes

--- a/app/views/broadcast_mailer/welcome.text.erb
+++ b/app/views/broadcast_mailer/welcome.text.erb
@@ -3,7 +3,7 @@ Liebe(r) <%= @contact_person.name + ',' %>
 
 seit dieser Woche sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal http://www.clarat.org' zu finden.
 
-Ihr Angebot heißt bei clarat <%= @offer.name %> und Sie finden es hier:
+Ihr Angebot heißt bei clarat "<%= @offer.name %>" und Sie finden es hier:
 <%= offer_url(@offer) %>
 
 Fehlt etwas? Das kann sein. Denn wir sind auch weiterhin dabei, stetig Angebote zu ergänzen. Deshalb kommt es vor, dass wir noch nicht alle Angebote einer Organisation erfasst haben.
