--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -41,6 +41,8 @@
               link_to('Hier',
                       'https://vimeo.com/112156061',
                       target: '_blank')
+          h4.FAQ_question = t '.section_one.question_eight'
+          .FAQ_paragraph = t '.section_one.answer_eight'
 
       section
         h3.section-question-group__headline = t '.section_two.heading'
@@ -77,6 +79,10 @@
           .FAQ_paragraph = t '.section_three.answer_five'
           h4.FAQ_question = t '.section_three.question_six'
           .FAQ_paragraph = t '.section_three.answer_six'
+          h4.FAQ_question = t '.section_three.question_seven'
+          .FAQ_paragraph = t '.section_three.answer_seven'
+          h4.FAQ_question = t '.section_three.question_eight'
+          .FAQ_paragraph = t '.section_three.answer_eight'
 
       section
         h3.section-question-group__headline = t '.section_four.heading'
@@ -94,6 +100,46 @@
               mail_to('post@clarat.org',
                       'post@clarat.org',
                       target: '_blank')
+          h4.FAQ_question = t '.section_four.question_five'
+          .FAQ_paragraph
+            == t '.section_four.answer_five'
+            p
+              ul
+                li
+                  = t '.section_four.answer_five_bullet_one'
+                li
+                  == t '.section_four.answer_five_bullet_two'
+                li
+                  = t '.section_four.answer_five_bullet_three'
+                li
+                  = t '.section_four.answer_five_bullet_four'
+                li
+                  == t '.section_four.answer_five_bullet_five'
+                li
+                  = t '.section_four.answer_five_bullet_six'
+          h4.FAQ_question = t '.section_four.question_six'
+          .FAQ_paragraph
+            == t '.section_four.answer_six'
+            p
+              ul
+                li
+                  = t '.section_four.answer_six_bullet_one'
+                li
+                  == t '.section_four.answer_six_bullet_two'
+                li
+                  = t '.section_four.answer_six_bullet_three'
+                li
+                  = t '.section_four.answer_six_bullet_four'
+                li
+                  == t '.section_four.answer_six_bullet_five'
+                li
+                  = t '.section_four.answer_six_bullet_six'
+                li
+                  = t '.section_four.answer_six_bullet_seven'
+          h4.FAQ_question = t '.section_four.question_seven'
+          .FAQ_paragraph == t '.section_four.answer_seven'
+          h4.FAQ_question = t '.section_four.question_eight'
+          .FAQ_paragraph == t '.section_four.answer_eight'
 
       section
         h3.section-question-group__headline = t '.section_five.heading'
@@ -135,4 +181,120 @@
                   == t '.section_five.answer_four_bullet_two'
           h4.FAQ_question = t '.section_five.question_five'
           .FAQ_paragraph = t '.section_five.answer_five'
-
+          h4.FAQ_question = t '.section_five.question_six'
+          .FAQ_paragraph == t '.section_five.answer_six'
+          h4.FAQ_question = t '.section_five.question_seven'
+          .FAQ_paragraph = t '.section_five.answer_seven'
+          h4.FAQ_question = t '.section_five.question_eight'
+          .FAQ_paragraph == t '.section_five.answer_eight'
+          h4.FAQ_question = t '.section_five.question_nine'
+          .FAQ_paragraph
+            == t '.section_five.answer_nine_first_part'
+            p
+              ul
+                li
+                  == t '.section_five.answer_nine_bullet_one'
+            p
+              = t '.section_five.answer_nine_second_part'
+            p
+              ul
+                li
+                  == t '.section_five.answer_nine_bullet_two'
+          h4.FAQ_question = t '.section_five.question_ten'
+          .FAQ_paragraph == t '.section_five.answer_ten'
+          h4.FAQ_question = t '.section_five.question_eleven'
+          .FAQ_paragraph
+            = t '.section_five.answer_eleven'
+            p
+              ul
+                li
+                  == t '.section_five.answer_eleven_bullet_one'
+                li
+                  == t '.section_five.answer_eleven_bullet_two'
+                li
+                  = t '.section_five.answer_eleven_bullet_three'
+          h4.FAQ_question = t '.section_five.question_twelve'
+          .FAQ_paragraph
+            == t '.section_five.answer_twelve_first_part',
+              mailto: \
+              mail_to('post@clarat.org',
+                      'post@clarat.org',
+                      target: '_blank')
+            p
+              = t '.section_five.answer_twelve_second_part'
+            p
+              ul
+                li
+                  = t '.section_five.answer_twelve_bullet_one'
+                li
+                  == t '.section_five.answer_twelve_bullet_two'
+          h4.FAQ_question = t '.section_five.question_thirteen'
+          .FAQ_paragraph == t '.section_five.answer_thirteen'
+          h4.FAQ_question = t '.section_five.question_fourteen'
+          .FAQ_paragraph
+            == t '.section_five.answer_fourteen_first_part'
+            p
+              ul
+                li
+                  = t '.section_five.answer_fourteen_bullet_one'
+                li
+                  = t '.section_five.answer_fourteen_bullet_two'
+                li
+                  = t '.section_five.answer_fourteen_bullet_three'
+                li
+                  = t '.section_five.answer_fourteen_bullet_four'
+                li
+                  = t '.section_five.answer_fourteen_bullet_five'
+                li
+                  = t '.section_five.answer_fourteen_bullet_six'
+            p
+              == t '.section_five.answer_fourteen_second_part'
+          h4.FAQ_question = t '.section_five.question_fifteen'
+          .FAQ_paragraph
+            == t '.section_five.answer_fifteen_first_part'
+            p
+              ul
+                li
+                  = t '.section_five.answer_fifteen_bullet_one'
+                li
+                  = t '.section_five.answer_fifteen_bullet_two'
+                li
+                  = t '.section_five.answer_fifteen_bullet_three'
+                li
+                  = t '.section_five.answer_fifteen_bullet_four'
+                li
+                  = t '.section_five.answer_fifteen_bullet_five'
+            p
+              == t '.section_five.answer_sixteen_second_part'
+          h4.FAQ_question = t '.section_five.question_sixteen'
+          .FAQ_paragraph
+            == t '.section_five.answer_sixteen_first_part'
+            p
+              ul
+                li
+                  = t '.section_five.answer_sixteen_bullet_one'
+                li
+                  = t '.section_five.answer_sixteen_bullet_two'
+                li
+                  = t '.section_five.answer_sixteen_bullet_three'
+            p
+              == t '.section_five.answer_sixteen_second_part'
+          h4.FAQ_question = t '.section_five.question_seventeen'
+          .FAQ_paragraph
+            == t '.section_five.answer_seventeen_first_part'
+            p
+              ul
+                li
+                  = t '.section_five.answer_seventeen_bullet_one'
+                li
+                  = t '.section_five.answer_seventeen_bullet_two'
+                li
+                  = t '.section_five.answer_seventeen_bullet_three'
+                li
+                  = t '.section_five.answer_seventeen_bullet_four'
+                li
+                  = t '.section_five.answer_seventeen_bullet_five'
+            p
+              == t '.section_five.answer_seventeen_second_part'
+          h4.FAQ_question = t '.section_five.question_eighteen'
+          .FAQ_paragraph == t '.section_five.answer_eighteen'
