Make contact form more responsive

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -201,6 +201,17 @@
     }
   }
 
+  .contact-form {
+    margin-top: 22px;
+
+    .string input,
+    .email input,
+    textarea,
+    &.formtastic .inline-errors {
+      width: 410px;
+    }
+  }
+
   // Footer ######################################
 
   .nav-site__listitem {
