--- a/app/views/contacts/new.html.slim
+++ b/app/views/contacts/new.html.slim
@@ -1,4 +1,4 @@
 .wrapper-inner
-  main.content-main
+  main.content-main.section-content--contact
     h2= t '.contact_heading'
     = render '/contacts/shared/new', contact: @contact, reporting: false
