Fix navbar on about mobile about page

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -52,8 +52,7 @@
     .wrapper-inner {
       padding: 0;
 
-      .template--pages-home &,
-      .template--pages-about & {
+      .template--pages-home & {
         padding: 0 20px;
       }
     }
