--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -1,7 +1,7 @@
 - provide(:title, t('.title') )
 - cache 'about_page' do
 
-  main.content-main.content-main--wide
+  main.content-main.content-main--wide.template--pages-about
     .wrapper-inner
       h2 = t '.heading'
 
