--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -35,6 +35,10 @@
     margin: 0 auto;
     padding: 0;
     width: 100%;
+    &.template--pages-about{
+      padding-top: 100px !important;
+    }
+
   }
 }
 
